fixed  overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  background-color: transparent;
+  width: 100dvw;
+  overflow-x: hidden;
+}
+
 a {
   -webkit-text-decoration-line: underline;
   -webkit-text-decoration-style: dotted;
@@ -37,7 +43,7 @@ a:hover {
 }
 
 #tsparticles {
-  z-index: -1;
+  z-index: -20;
   position: absolute;
   display: block;
   top: 0;
@@ -61,6 +67,7 @@ h3 {
 }
 
 header {
+  width: 100%;
   padding: 60px 20px;
   height: 100vh;
   min-height: 250px;
@@ -136,6 +143,7 @@ header nav ul li::before {
 }
 
 main {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -328,6 +336,7 @@ li {
 }
 
 footer {
+  width: 100%;
   margin: 40px 30px;
   text-align: center;
   color: #ffffff;
